Treat textarea as notepad's window-content to avoid overflow tricks for scroll bar

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -303,7 +303,7 @@ hr {
 }
 .notepad-textarea {
   width: 100%;
-  height: 100%;
+
   border: none;
   outline: none;
   resize: none;
